fix issue for mysql and api container

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -49,12 +49,21 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      - ./mysql_data:/var/lib/mysql
+      - mysql_data:/var/lib/mysql
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
   ai-shifu-redis:
     container_name: ai-shifu-redis
     image: redis:latest
     ports:
       - "6379:6379"
     volumes:
-      - ./redis_data:/data
+      - redis_data:/data
+
+volumes:
+  mysql_data:
+  redis_data:
